Agregué la etiqueta de enlaces a los items de la sección blog

--- a/index.html
+++ b/index.html
@@ -175,34 +175,42 @@
         <section id="blog" class="blog sections">
             <h2 class="blog__title titles-section">Blog</h2>
             <section class="blog__container containers-sections">
-                <figure class="blog__container--item containers-sections__item">
-                    <img src="" alt="">
-                    <figcaption>
-                        <h3>Primer blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </figcaption>
-                </figure>
-                <figure class="blog__container--item containers-sections__item">
-                    <img src="" alt="">
-                    <figcaption>
-                        <h3>Primer blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </figcaption>
-                </figure>
-                <figure class="blog__container--item containers-sections__item">
-                    <img src="" alt="">
-                    <figcaption>
-                        <h3>Primer blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </figcaption>
-                </figure>
-                <figure class="blog__container--item containers-sections__item">
-                    <img src="" alt="">
-                    <figcaption>
-                        <h3>Primer blog</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </figcaption>
-                </figure>
+                <a href="">
+                    <figure class="blog__container--item containers-sections__item">
+                        <img src="" alt="">
+                        <figcaption>
+                            <h3>Primer blog</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="blog__container--item containers-sections__item">
+                        <img src="" alt="">
+                        <figcaption>
+                            <h3>Primer blog</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="blog__container--item containers-sections__item">
+                        <img src="" alt="">
+                        <figcaption>
+                            <h3>Primer blog</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure class="blog__container--item containers-sections__item">
+                        <img src="" alt="">
+                        <figcaption>
+                            <h3>Primer blog</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </figcaption>
+                    </figure>
+                </a>
             </section>
         </section>
 
