Agregué links al bloque de redes sociales de la sección contacto

--- a/index.html
+++ b/index.html
@@ -237,26 +237,36 @@
                 <button type="submit" class="contact__form--button button">Send Message</button>
             </form>
             <section class="contact__links block-container">
-                <figure>
-                    <img src="./assets/icons/mailto.svg" alt="Mailto Logo">
-                    <figcaption>Mailto</figcaption>
-                </figure>
-                <figure>
-                    <img src="./assets/icons/cv.svg" alt="CV Logo">
-                    <figcaption>CV</figcaption>
-                </figure>
-                <figure>
-                    <img src="./assets/icons/LinkedinLogo.svg" alt="LinkedIn Logo">
-                    <figcaption>LinkedIn</figcaption>
-                </figure>
-                <figure>
-                    <img src="./assets/icons/GithubLogo.svg" alt="Github Logo">
-                    <figcaption>Github</figcaption>
-                </figure>
-                <figure>
-                    <img src="./assets/icons/TwitterLogo.svg" alt="Twitter Logo">
-                    <figcaption>Twitter</figcaption>
-                </figure>
+                <a href="mailto:jstevenfm@gmail.com" target="_blank">
+                    <figure>
+                        <img src="./assets/icons/mailto.svg" alt="Mailto Logo">
+                        <figcaption>Mailto</figcaption>
+                    </figure>
+                </a>
+                <a href="">
+                    <figure>
+                        <img src="./assets/icons/cv.svg" alt="CV Logo">
+                        <figcaption>CV</figcaption>
+                    </figure>
+                </a>
+                <a href="https://www.linkedin.com/in/jeisson-steven-fonseca-medina-0848551b1/" target="_blank">
+                    <figure>
+                        <img src="./assets/icons/LinkedinLogo.svg" alt="LinkedIn Logo">
+                        <figcaption>LinkedIn</figcaption>
+                    </figure>
+                </a>
+                <a href="https://github.com/jstevenfm" target="_blank">
+                    <figure>
+                        <img src="./assets/icons/GithubLogo.svg" alt="Github Logo">
+                        <figcaption>Github</figcaption>
+                    </figure>
+                </a>
+                <a href="https://twitter.com/jstevenfm" target="_blank">
+                    <figure>
+                        <img src="./assets/icons/TwitterLogo.svg" alt="Twitter Logo">
+                        <figcaption>Twitter</figcaption>
+                    </figure>
+                </a>
             </section>
         </section>
     </main>
