Añadí enlaces faltantes en el apartado de redes sociales en la sección Sobre Mi. Agregué los target blanks en las etiquetas faltantes

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
             <p class="presentation__phrase">"Less fear, more attitude" - "Menos miedo, más actitud"</p>
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
-                    <a href="mailto:jstevenfm@gmail.com"><img src="./assets/icons/mailto.svg" alt="Mailto"
+                    <a href="mailto:jstevenfm@gmail.com" target="_blank"><img src="./assets/icons/mailto.svg" alt="Mailto"
                             title="Enviar Email"></a>
                 </li>
                 <li class="presentation__rrss--item">
                     <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae" title="Curriculum"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/LinkedinLogo.svg" alt=Linkedin" title="Linkedin"></a>
+                    <a href="https://www.linkedin.com/in/jeisson-steven-fonseca-medina-0848551b1/" target="_blank"><img src="./assets/icons/LinkedinLogo.svg" alt=LinkedIn" title="LinkedIn"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/GithubLogo.svg" alt="Github" title="Github"></a>
+                    <a href="https://github.com/jstevenfm" target="_blank"><img src="./assets/icons/GithubLogo.svg" alt="Github" title="Github"></a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a href=""><img src="./assets/icons/TwitterLogo.svg" alt="Twitter" title="Twitter"></a>
+                    <a href="https://twitter.com/jstevenfm" target="_blank"><img src="./assets/icons/TwitterLogo.svg" alt="Twitter" title="Twitter"></a>
                 </li>
             </ul>
             <a class="scroll">
@@ -121,7 +121,7 @@
         <section id="portfolio" class="portfolio sections">
             <h2 class="portfolio__title titles-section">Portfolio</h2>
             <section class="portfolio__container containers-sections">
-                <a href="/">
+                <a href="/" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
                         <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                         <figcaption>
@@ -133,7 +133,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
                         <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                         <figcaption>
@@ -145,7 +145,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
                         <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                         <figcaption>
@@ -157,7 +157,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
                         <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
                         <figcaption>
@@ -175,7 +175,7 @@
         <section id="blog" class="blog sections">
             <h2 class="blog__title titles-section">Blog</h2>
             <section class="blog__container containers-sections">
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -184,7 +184,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -193,7 +193,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -202,7 +202,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
