Removed color of the footer. Added the gradient generally to the styles html

--- a/index.html
+++ b/index.html
@@ -274,6 +274,6 @@
     </main>
 </body>
 <footer>
-    <p>Designed and Developed by Jeisson Fonseca © 2022</p>
+    <p>Designed and Developed ♥ by Jeisson Fonseca</p>
 </footer>
 </html>
