--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img class="about__img" src="./assets/icons/picture-profile.svg" alt="Profile picture">
             <p class="about__description">Hi! I'm Jeisson, Colombian, self-taught,  tech lover and web developer in
                 process.</p>
-            <button class="about__button button">
+            <button class="about__button button" type="button" onclick="window.open('./files/HV-Jeisson Fonseca.pdf')">
                 <img class="about__button--icon" src="./assets/icons/CTA-IdentificationBadge.svg"
                     alt="Curriculum Vitae">
                 <p class="about__button--txt">Download CV</p>
