--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul class="presentation__rrss">
                 <li class="presentation__rrss--item">
                     <a href="mailto:jstevenfm@gmail.com" target="_blank"><img src="./assets/icons/mailto.svg" alt="Mailto"
-                            title="Enviar Email"></a>
+                            title="Send Email"></a>
                 </li>
                 <li class="presentation__rrss--item">
                     <a href=""><img src="./assets/icons/cv.svg" alt="Curriculum Vitae" title="Curriculum"></a>
