fix - Add href for download cv

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                 </li>
                 <li class="presentation__rrss--item">
-                    <a title="Download CV" href="">
+                    <a title="Download CV" href="./files/HV-Jeisson Fonseca.pdf" target="_blank">
                         <svg alt="Download CV" xmlns="http://www.w3.org/2000/svg" width="23" height="22" fill="none">
                             <path stroke="#F9F9FF" stroke-linecap="round" stroke-linejoin="round" d="M10.767 13.125a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
                             <path stroke="#F9F9FF" stroke-linecap="round" stroke-linejoin="round" d="M7.017 15a4.687 4.687 0 0 1 7.5 0"/>
@@ -322,7 +322,7 @@
                         <figcaption>Mailto</figcaption>
                     </figure>
                 </a>
-                <a href="">
+                <a href="./files/HV-Jeisson Fonseca.pdf" target="_blank">
                     <figure>
                         <svg alt="Download CV" xmlns="http://www.w3.org/2000/svg" width="23" height="22" fill="none">
                             <path stroke="#F9F9FF" stroke-linecap="round" stroke-linejoin="round" d="M10.767 13.125a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
