--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap" rel="stylesheet">
-    <title>Jeisson Fonseca</title>
+    <title>JStevenfm</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                 <svg alt="Logo JStevenfm" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none">
                     <path fill="#F9F9FF" fill-rule="evenodd" d="M4 0a4 4 0 0 0-4 4v16a4 4 0 0 0 4 4h16a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4H4Zm5.404 20c.373.087.741.13 1.105.13.71 0 1.283-.217 1.716-.65.442-.442.663-1.148.663-2.119v-6.916h-1.443v6.552c0 .468-.043.828-.13 1.079-.078.251-.2.425-.364.52-.165.095-.381.143-.65.143-.286 0-.529-.043-.728-.13a1.67 1.67 0 0 1-.52-.416l-.585 1.339c.251.217.563.373.936.468Zm6.252-.143a4.584 4.584 0 0 0 1.547.273c.59 0 1.114-.104 1.573-.312a2.432 2.432 0 0 0 1.092-.923c.269-.407.403-.901.403-1.482 0-.373-.078-.715-.234-1.027a2.681 2.681 0 0 0-.61-.806 3.145 3.145 0 0 0-.586-.442c-.208-.13-.507-.303-.897-.52a17.828 17.828 0 0 1-.975-.572 2.356 2.356 0 0 1-.585-.546 1.216 1.216 0 0 1-.234-.728c0-.381.122-.667.364-.858.252-.2.594-.299 1.027-.299.338 0 .654.065.95.195.303.121.537.269.701.442l.69-1.183c-.625-.511-1.383-.767-2.276-.767-.832 0-1.52.221-2.067.663-.546.433-.819 1.062-.819 1.885 0 .997.42 1.777 1.261 2.34.182.121.52.303 1.014.546.416.208.737.386.962.533.226.139.416.316.572.533.156.217.234.472.234.767 0 .381-.147.68-.442.897-.286.217-.659.325-1.118.325-.355 0-.728-.087-1.118-.26-.381-.182-.663-.355-.845-.52l-.689 1.235c.226.225.594.429 1.105.611Z" clip-rule="evenodd"/>
                 </svg>
-                <p class="navbar__name--title"> Jeisson Fonseca</p>
+                <p class="navbar__name--title"> JStevenfm</p>
             </a>
             <nav class="navbar__menu">
                 <ul class="navbar__menu--list">
