perf - Changed image png to wedp. perf - Removed ducplicate images and emp´ty links

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <section class="portfolio__container containers-sections">
                 <a href="/" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
-                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <img src="./assets/imgs/portfolio.webp" alt="Imagen Proyecto de portfolio personal">
                         <figcaption>
                             <h3>My Landing Page</h3>
                             <p>This page shows my projects</p>
@@ -185,9 +185,9 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
-                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <img src="" alt="">
                         <figcaption>
                             <h3>My Landing Page</h3>
                             <p>This page shows my projects</p>
@@ -205,9 +205,9 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
-                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <img src="" alt="">
                         <figcaption>
                             <h3>My Landing Page</h3>
                             <p>This page shows my projects</p>
@@ -225,9 +225,9 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="portfolio__container--item containers-sections__item">
-                        <img src="./assets/imgs/portfolio.png" alt="Imagen Proyecto de portfolio personal">
+                        <img src="" alt="">
                         <figcaption>
                             <h3>My Landing Page</h3>
                             <p>This page shows my projects</p>
@@ -251,7 +251,7 @@
         <section id="blog" class="blog sections">
             <h2 class="blog__title titles-section">Blog</h2>
             <section class="blog__container containers-sections">
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -260,7 +260,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -269,7 +269,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
@@ -278,7 +278,7 @@
                         </figcaption>
                     </figure>
                 </a>
-                <a href="" target="_blank">
+                <a href="#" target="_blank">
                     <figure class="blog__container--item containers-sections__item">
                         <img src="" alt="">
                         <figcaption>
