perf - Added link and max-width to icon scroll

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                     </a>
                 </li>
             </ul>
-            <a class="scroll">
+            <a href="#about
+            " class="scroll">
                 <p class="scroll__title">Scroll</p>
                 <div class="scroll__container">
                     <div class="scroll__container--point"></div>
